changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-ig-components-test-2",
+  "name": "wp-ig-components",
   "version": "0.0.13",
   "description": "",
   "main": "index.js",
